first pass at re-implementing custodian email